# pdf.js

./: .gitignore  README.md  package-lock.json  package.json
src/core/: content_stream_filter.js  content_stream_program.js  content_stream_tokenizer.js  content_stream_writer.js  document.js  evaluator.js  redaction_content_stream.js  redaction_region.js  redaction_rewriter.js  text_edit_candidate_builder.js  text_edit_container_graph.js  text_edit_content_stream.js  text_edit_normalized_packet.js  text_edit_planner.js  text_edit_rewriter.js  text_edit_subject.js  text_edit_whitespace_policy.js  worker.js
src/display/: api.js  app_options.js  native_text_edit_app_controller.js  native_text_edit_block_builder.js  native_text_edit_controller.js  native_text_edit_galley.js  native_text_edit_geometry.js  native_text_edit_line_candidate.js  native_text_edit_service.js  native_text_edit_surface.js  text_layer.js  text_layer_builder.css  text_layer_builder.js  ui_utils.js
src/shared/: text_edit_source.js
viewer-next/: .env.example  index.html  vite.config.mjs
viewer-next/scripts/: smoke.mjs
viewer-next/src-tauri/: Cargo.toml  tauri.conf.json
viewer-next/src-tauri/capabilities/: default.json
viewer-next/src-tauri/src/: main.rs
web/: native_text_edit_app_controller.js  native_text_edit_block_builder.js  native_text_edit_controller.js  native_text_edit_galley.js  native_text_edit_geometry.js  native_text_edit_line_candidate.js  native_text_edit_service.js  native_text_edit_surface.js  pdf_viewer.component.js  text_layer_builder.css  text_layer_builder.js  viewer.html
(+106 files in other folders)
